--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
 script:
   - yarn lint
   - yarn test
+after_success:
+  - npm install -g codeclimate-test-reporter
+  - codeclimate-test-reporter < lcov.info
 branches:
   only:
     - master
@@ -11,3 +14,6 @@ cache:
   yarn: true
   directories:
   - node_modules
+addons:
+  code_climate:
+    repo_token: 373467d1f4b63d79649cb8dc66269b1ea29d5245c49660d4653690334fbfce42
