--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-preset-latest": "^6.22.0",
+    "coveralls": "^2.13.1",
     "eslint": "^3.17.0",
     "eslint-plugin-jest": "^19.0.1",
     "jest": "^19.0.2"
